--- a/test/fixtures/praxis_tests.yml
+++ b/test/fixtures/praxis_tests.yml
@@ -3,7 +3,8 @@
 # Table name: praxis_tests
 #
 #  id               :integer          not null, primary key
-#  TestCode         :string(45)       not null
+  id: #
+TestCode         :string(45)       not null
 #  TestName         :string(255)
 #  CutScore         :integer
 #  TestFamily       :string(1)
@@ -32,6 +33,7 @@
 <% enum = (1..1000).each %>
 
 <%= "test#{enum.next}:" %>
+  id: 
   TestCode: "5710"
   TestName:  C-PPST Reading (computer)
   CutScore: 176
@@ -46,6 +48,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5712"
   TestName:  "Core Academic Skills for Educators: Reading"
   CutScore: 156
@@ -53,13 +56,14 @@
   Sub1:  Key Ideas and Details
   Sub2:  Craft, Structure, and Language Skills
   Sub3:  Integration of Knowledge and Ideas
-  Sub4: Null 
+  Sub4: Null
   Sub5: Null
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5720"
   TestName:  C-PPST Writing (computer)
   CutScore: 174
@@ -74,20 +78,22 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5722"
   TestName:  "Core Academic Skills for Educators: Writing"
   CutScore: 162
   TestFamily: 1
   Sub1:  Text Types, Purpose and Production
   Sub2:  Language and Research Skills for Writing
-  Sub3: Null 
-  Sub4: Null 
+  Sub3: Null
+  Sub4: Null
   Sub5: Null
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5730"
   TestName:  C-PPST Mathematics (computer)
   CutScore: 174
@@ -102,6 +108,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5732"
   TestName:  "Core Academic Skills for Educators: Mathematics"
   CutScore: 150
@@ -116,6 +123,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0014"
   TestName: "Elementary ED: Content Knowledge"
   CutScore: 148
@@ -130,6 +138,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0023"
   TestName: Interdisciplinary Early Childhood Education
   CutScore: 166
@@ -144,6 +153,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0032"
   TestName: "Elem Ed: Reading"
   CutScore: 165
@@ -158,6 +168,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0033"
   TestName: "Elem Ed: Mathematics"
   CutScore: 164
@@ -172,6 +183,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0034"
   TestName: "Elem Ed: Social Studies"
   CutScore: 155
@@ -186,6 +198,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0035"
   TestName: "Elem Ed: Science"
   CutScore: 159
@@ -200,6 +213,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0041"
   TestName: "English Language Literature and Composition: Content Knowledge"
   CutScore: 160
@@ -214,6 +228,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0042"
   TestName: English Language, Literature and Composition Essays
   CutScore: 155
@@ -228,6 +243,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0044"
   TestName: "English Lang, Lit, and Comp: Analysis"
   CutScore: 166
@@ -242,6 +258,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0050"
   TestName: Technology Education
   CutScore: 600
@@ -256,6 +273,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0051"
   TestName: Technology Education
   CutScore: 159
@@ -270,6 +288,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0061"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 125
@@ -284,6 +303,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0063"
   TestName: "Mathematics: Proofs Models Problems Part 1"
   CutScore: 141
@@ -298,6 +318,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0069"
   TestName: "Middle School: Mathematics"
   CutScore: 148
@@ -312,6 +333,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0081"
   TestName: "Social Studies: Content Knowledge"
   CutScore: 151
@@ -326,6 +348,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0083"
   TestName: "Social Studies: Interpretation of Materials"
   CutScore: 159
@@ -340,11 +363,12 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0086"
   TestName: "Social Studies: Content and Interpretation"
   CutScore: 153
   TestFamily: 2
-  Sub1: U.S. History 
+  Sub1: U.S. History
   Sub2: World History
   Sub3: Government/Civics
   Sub4: Economics
@@ -354,6 +378,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0092"
   TestName: "Physical ED Analysis and Design"
   CutScore: 151
@@ -368,6 +393,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0095"
   TestName: "Physical Education: Content and Design"
   CutScore: 169
@@ -382,6 +408,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0111"
   TestName: "Music Concepts and Processes"
   CutScore: 145
@@ -396,6 +423,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0113"
   TestName: "Music: Content Knowledge"
   CutScore: 154
@@ -410,6 +438,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0114"
   TestName: "Music: Content and Instruction"
   CutScore: 162
@@ -424,6 +453,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0135"
   TestName: "Art: Content and Analysis"
   CutScore: 161
@@ -438,6 +468,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0235"
   TestName: "Biology: Content Knowledge"
   CutScore: 146
@@ -452,6 +483,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0265"
   TestName: "Physics: Content Knowledge"
   CutScore: 133
@@ -466,6 +498,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0439"
   TestName: "Middle School: Science"
   CutScore: 144
@@ -480,6 +513,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0522"
   TestName: "PLT: Grades K-6"
   CutScore: 161
@@ -494,6 +528,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0523"
   TestName: "PLT: Grades 5-9"
   CutScore: 161
@@ -508,6 +543,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0524"
   TestName: "PLT: Grades 7-12"
   CutScore: 161
@@ -522,6 +558,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0622"
   TestName: "PLT: Grades K-6"
   CutScore: 160
@@ -536,6 +573,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0623"
   TestName: "PLT: Grades 5-9"
   CutScore: 160
@@ -550,6 +588,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0624"
   TestName: "PLT: Grades 7-12"
   CutScore: 160
@@ -564,6 +603,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "0856"
   TestName: "Health and Physical Education: Content Knowledge"
   CutScore: 156
@@ -578,6 +618,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5032"
   TestName: "Elem Ed: Reading"
   CutScore: 165
@@ -592,6 +633,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5033"
   TestName: "Elem Ed: Mathematics"
   CutScore: 164
@@ -606,6 +648,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5034"
   TestName: "Elem Ed: Social Studies"
   CutScore: 155
@@ -620,6 +663,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5035"
   TestName: "Elem Ed: Science"
   CutScore: 159
@@ -634,6 +678,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5039"
   TestName: "English Language Arts: Content and Analysis"
   CutScore: 168
@@ -648,6 +693,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5044"
   TestName: "English Lang, Lit, and Comp: Analysis"
   CutScore: 166
@@ -662,6 +708,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5051"
   TestName: Technology Education
   CutScore: 159
@@ -676,6 +723,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5061"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 125
@@ -690,6 +738,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5063"
   TestName: "Mathematics: Proofs Models Problems Part 1"
   CutScore: 141
@@ -704,6 +753,7 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5069"
   TestName: "Middle School: Mathematics"
   CutScore: 148
@@ -718,11 +768,12 @@
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5086"
   TestName: "Social Studies: Content and Interpretation"
   CutScore: 153
   TestFamily: 2
-  Sub1: U.S. History 
+  Sub1: U.S. History
   Sub2: World History
   Sub3: Government/Civics
   Sub4: Economics
@@ -732,6 +783,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5095"
   TestName: "Physical Education: Content and Design"
   CutScore: 169
@@ -746,6 +798,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5114"
   TestName: "Music: Content and Instruction"
   CutScore: 162
@@ -760,6 +813,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5135"
   TestName: "Art: Content and Analysis"
   CutScore: 161
@@ -774,6 +828,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5161"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 160
@@ -788,6 +843,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5235"
   TestName: "Biology: Content Knowledge"
   CutScore: 146
@@ -802,6 +858,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5265"
   TestName: "Physics: Content Knowledge"
   CutScore: 133
@@ -816,6 +873,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5439"
   TestName: "Middle School: Science"
   CutScore: 144
@@ -830,6 +888,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5622"
   TestName: "PLT: Grades K-6"
   CutScore: 160
@@ -844,6 +903,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5623"
   TestName: "PLT: Grades 5-9"
   CutScore: 160
@@ -858,6 +918,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5624"
   TestName: "PLT: Grades 7-12"
   CutScore: 160
@@ -872,6 +933,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5856"
   TestName: "Health and Physical Education: Content Knowledge"
   CutScore: 156
@@ -886,6 +948,7 @@
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
+  id:
   TestCode: "5169"
   TestName: Middle School Mathematics
   CutScore: 165
