--- a/test/fixtures/praxis_tests.yml
+++ b/test/fixtures/praxis_tests.yml
@@ -3,8 +3,7 @@
 # Table name: praxis_tests
 #
 #  id               :integer          not null, primary key
-  id: #
-TestCode         :string(45)       not null
+#  TestCode         :string(45)       not null
 #  TestName         :string(255)
 #  CutScore         :integer
 #  TestFamily       :string(1)
@@ -33,7 +32,6 @@ TestCode         :string(45)       not null
 <% enum = (1..1000).each %>
 
 <%= "test#{enum.next}:" %>
-  id: 
   TestCode: "5710"
   TestName:  C-PPST Reading (computer)
   CutScore: 176
@@ -48,7 +46,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5712"
   TestName:  "Core Academic Skills for Educators: Reading"
   CutScore: 156
@@ -63,7 +60,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5720"
   TestName:  C-PPST Writing (computer)
   CutScore: 174
@@ -78,7 +74,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5722"
   TestName:  "Core Academic Skills for Educators: Writing"
   CutScore: 162
@@ -93,7 +88,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5730"
   TestName:  C-PPST Mathematics (computer)
   CutScore: 174
@@ -108,7 +102,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5732"
   TestName:  "Core Academic Skills for Educators: Mathematics"
   CutScore: 150
@@ -123,7 +116,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0014"
   TestName: "Elementary ED: Content Knowledge"
   CutScore: 148
@@ -138,7 +130,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0023"
   TestName: Interdisciplinary Early Childhood Education
   CutScore: 166
@@ -153,7 +144,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0032"
   TestName: "Elem Ed: Reading"
   CutScore: 165
@@ -168,7 +158,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0033"
   TestName: "Elem Ed: Mathematics"
   CutScore: 164
@@ -183,7 +172,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0034"
   TestName: "Elem Ed: Social Studies"
   CutScore: 155
@@ -198,7 +186,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0035"
   TestName: "Elem Ed: Science"
   CutScore: 159
@@ -213,7 +200,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0041"
   TestName: "English Language Literature and Composition: Content Knowledge"
   CutScore: 160
@@ -228,7 +214,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0042"
   TestName: English Language, Literature and Composition Essays
   CutScore: 155
@@ -243,7 +228,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0044"
   TestName: "English Lang, Lit, and Comp: Analysis"
   CutScore: 166
@@ -258,7 +242,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0050"
   TestName: Technology Education
   CutScore: 600
@@ -273,7 +256,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0051"
   TestName: Technology Education
   CutScore: 159
@@ -288,7 +270,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0061"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 125
@@ -303,7 +284,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0063"
   TestName: "Mathematics: Proofs Models Problems Part 1"
   CutScore: 141
@@ -318,7 +298,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0069"
   TestName: "Middle School: Mathematics"
   CutScore: 148
@@ -333,7 +312,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0081"
   TestName: "Social Studies: Content Knowledge"
   CutScore: 151
@@ -348,7 +326,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0083"
   TestName: "Social Studies: Interpretation of Materials"
   CutScore: 159
@@ -363,7 +340,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0086"
   TestName: "Social Studies: Content and Interpretation"
   CutScore: 153
@@ -378,7 +354,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0092"
   TestName: "Physical ED Analysis and Design"
   CutScore: 151
@@ -393,7 +368,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0095"
   TestName: "Physical Education: Content and Design"
   CutScore: 169
@@ -408,7 +382,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0111"
   TestName: "Music Concepts and Processes"
   CutScore: 145
@@ -423,7 +396,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0113"
   TestName: "Music: Content Knowledge"
   CutScore: 154
@@ -438,7 +410,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0114"
   TestName: "Music: Content and Instruction"
   CutScore: 162
@@ -453,7 +424,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0135"
   TestName: "Art: Content and Analysis"
   CutScore: 161
@@ -468,7 +438,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0235"
   TestName: "Biology: Content Knowledge"
   CutScore: 146
@@ -483,7 +452,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0265"
   TestName: "Physics: Content Knowledge"
   CutScore: 133
@@ -498,7 +466,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0439"
   TestName: "Middle School: Science"
   CutScore: 144
@@ -513,7 +480,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0522"
   TestName: "PLT: Grades K-6"
   CutScore: 161
@@ -528,7 +494,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0523"
   TestName: "PLT: Grades 5-9"
   CutScore: 161
@@ -543,7 +508,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0524"
   TestName: "PLT: Grades 7-12"
   CutScore: 161
@@ -558,7 +522,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0622"
   TestName: "PLT: Grades K-6"
   CutScore: 160
@@ -573,7 +536,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0623"
   TestName: "PLT: Grades 5-9"
   CutScore: 160
@@ -588,7 +550,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0624"
   TestName: "PLT: Grades 7-12"
   CutScore: 160
@@ -603,7 +564,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "0856"
   TestName: "Health and Physical Education: Content Knowledge"
   CutScore: 156
@@ -618,7 +578,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5032"
   TestName: "Elem Ed: Reading"
   CutScore: 165
@@ -633,7 +592,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5033"
   TestName: "Elem Ed: Mathematics"
   CutScore: 164
@@ -648,7 +606,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5034"
   TestName: "Elem Ed: Social Studies"
   CutScore: 155
@@ -663,7 +620,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5035"
   TestName: "Elem Ed: Science"
   CutScore: 159
@@ -678,7 +634,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5039"
   TestName: "English Language Arts: Content and Analysis"
   CutScore: 168
@@ -693,7 +648,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5044"
   TestName: "English Lang, Lit, and Comp: Analysis"
   CutScore: 166
@@ -708,7 +662,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5051"
   TestName: Technology Education
   CutScore: 159
@@ -723,7 +676,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5061"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 125
@@ -738,7 +690,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5063"
   TestName: "Mathematics: Proofs Models Problems Part 1"
   CutScore: 141
@@ -753,7 +704,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5069"
   TestName: "Middle School: Mathematics"
   CutScore: 148
@@ -768,7 +718,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 1
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5086"
   TestName: "Social Studies: Content and Interpretation"
   CutScore: 153
@@ -783,7 +732,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5095"
   TestName: "Physical Education: Content and Design"
   CutScore: 169
@@ -798,7 +746,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5114"
   TestName: "Music: Content and Instruction"
   CutScore: 162
@@ -813,7 +760,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5135"
   TestName: "Art: Content and Analysis"
   CutScore: 161
@@ -828,7 +774,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5161"
   TestName: "Mathematics: Content Knowledge"
   CutScore: 160
@@ -843,7 +788,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5235"
   TestName: "Biology: Content Knowledge"
   CutScore: 146
@@ -858,7 +802,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5265"
   TestName: "Physics: Content Knowledge"
   CutScore: 133
@@ -873,7 +816,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5439"
   TestName: "Middle School: Science"
   CutScore: 144
@@ -888,7 +830,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5622"
   TestName: "PLT: Grades K-6"
   CutScore: 160
@@ -903,7 +844,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5623"
   TestName: "PLT: Grades 5-9"
   CutScore: 160
@@ -918,7 +858,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5624"
   TestName: "PLT: Grades 7-12"
   CutScore: 160
@@ -933,7 +872,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5856"
   TestName: "Health and Physical Education: Content Knowledge"
   CutScore: 156
@@ -948,7 +886,6 @@ TestCode         :string(45)       not null
   Program_ProgCode: Null
   CurrentTest: 0
 <%= "test#{enum.next}:" %>
-  id:
   TestCode: "5169"
   TestName: Middle School Mathematics
   CutScore: 165
